# RShell-A-Custom-Linux-Shell-Built-in-Rust

./: .gitignore  Cargo.toml
docs/: README.md
src/: alias.rs  async_io.rs  cache.rs  config.rs  history.rs  job_control.rs  lib.rs  line_editor.rs  main.rs  memory_pool.rs  parallel_exec.rs  performance.rs  scripting.rs  signal_handler.rs
src/command/: command.rs  mod.rs
src/shell/: builtins.rs  executor.rs  mod.rs  parser.rs
src/utils/: helpers.rs  mod.rs
tests/: integration_tests.rs  unit_tests.rs
